@@ -1,3 +1,9 @@
+2003-03-26 Damien Sandras  <dsandras@seconix.com>
+
+	* src/endpoint.cpp, src/endpoint.h: Applied patch from Fabrice 
+	Alphonso <fabrice@alphonso.dyndns.org> to add timestamp to saved
+	snapshot files.
+	
 2003-03-25 Damien Sandras  <dsandras@seconix.com>
 
 	* configure.in: Applied patch from Stefan Bruens to fix compilation
